k8s/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-db
  template:
    metadata:
      labels:
        app: demo-db
    spec:
      containers:
        - name: db
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
      volumes:
        - name: db-data
          emptyDir: { }
